[package]
name = "hax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1"
cached = "0"
egui = "0"
egui_extras = "0"
once_cell = "1"
pest = "2"
pest_derive = "2"

[dev-dependencies]
rand = "0"

[dependencies.eframe]
version = "0"
features = [
  "persistence",
]

[dependencies.windows]
version = "0"
features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
]